added repay consent, firebase notifications
